[package]
name = "rustlib"
version = "0.1.0"
authors = ["Lodry@ <janusz.filin@langivi.technology>"]
edition = "2018"
[lib]
crate-type=["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ext-php-rs = "0.7.4"
lazy_static = "1.4.0"

[build-dependencies]
bindgen = "0.59"
regex = "1.5.6"
cbindgen = "0.24.3"

